[gd_scene load_steps=12 format=3 uid="uid://di8ki46rvm5m6"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_xq05v"]
[ext_resource type="Texture2D" uid="uid://bdm8ayk1lo0dg" path="res://sprites/background-day.png" id="2_ud4f4"]
[ext_resource type="Script" path="res://scripts/pipes_spawner.gd" id="3_hknkl"]
[ext_resource type="Script" path="res://scripts/ground.gd" id="4_h2b7a"]
[ext_resource type="Texture2D" uid="uid://cu0sygwc7a65a" path="res://sprites/base.png" id="5_x67s5"]
[ext_resource type="Texture2D" uid="uid://bmb1bdxe47xfy" path="res://sprites/message.png" id="6_5dnne"]
[ext_resource type="Texture2D" uid="uid://d4aa1ihqjvgtj" path="res://sprites/gameover.png" id="7_hl66w"]
[ext_resource type="FontFile" uid="uid://bde853iv0vgd0" path="res://fonts/upheavtt.ttf" id="8_cehaq"]
[ext_resource type="PackedScene" uid="uid://h0gvshvi8rxg" path="res://entities/bird_rigid_body_2d.tscn" id="9_anh47"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nsd2q"]
size = Vector2(288, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qohih"]
size = Vector2(336, 112)

[node name="Game" type="Node2D"]
script = ExtResource("1_xq05v")

[node name="RestartTimer" type="Timer" parent="."]
one_shot = true

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_ud4f4")
centered = false

[node name="Ceiling" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ceiling"]
visible = false
position = Vector2(144, -12)
shape = SubResource("RectangleShape2D_nsd2q")

[node name="PipesSpawner" type="Node2D" parent="."]
position = Vector2(336, 208)
script = ExtResource("3_hknkl")

[node name="Timer" type="Timer" parent="PipesSpawner"]

[node name="Ground" type="Node2D" parent="."]
script = ExtResource("4_h2b7a")

[node name="StaticBody2D" type="StaticBody2D" parent="Ground"]
position = Vector2(168, 456)
collision_layer = 2

[node name="Sprite2D" type="Sprite2D" parent="Ground/StaticBody2D"]
texture = ExtResource("5_x67s5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/StaticBody2D"]
visible = false
shape = SubResource("RectangleShape2D_qohih")

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(0, -88)
texture = ExtResource("6_5dnne")
offset = Vector2(144, 256)

[node name="GameOver" type="Sprite2D" parent="."]
position = Vector2(0, -88)
texture = ExtResource("7_hl66w")
offset = Vector2(144, 256)

[node name="ScoreLabel" type="Label" parent="."]
offset_top = 32.0
offset_right = 288.0
offset_bottom = 88.0
theme_override_fonts/font = ExtResource("8_cehaq")
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HiScoreLabel" type="Label" parent="."]
offset_top = 80.0
offset_right = 288.0
offset_bottom = 136.0
theme_override_fonts/font = ExtResource("8_cehaq")
theme_override_font_sizes/font_size = 20
text = "HI-SCORE: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="BirdRigidBody2D" parent="." instance=ExtResource("9_anh47")]
position = Vector2(56, 232)

[connection signal="enter_game_over" from="." to="PipesSpawner" method="_on_game_enter_game_over"]
[connection signal="enter_game_over" from="." to="BirdRigidBody2D" method="_on_game_enter_game_over"]
[connection signal="enter_playing" from="." to="PipesSpawner" method="_on_game_enter_playing"]
[connection signal="enter_playing" from="." to="BirdRigidBody2D" method="_on_game_enter_playing"]
[connection signal="enter_title" from="." to="PipesSpawner" method="_on_game_enter_title"]
[connection signal="enter_title" from="." to="BirdRigidBody2D" method="_on_game_enter_title"]
[connection signal="timeout" from="RestartTimer" to="." method="_on_restart_timer_timeout"]
[connection signal="point_scored" from="PipesSpawner" to="." method="_on_pipes_spawner_point_scored"]
[connection signal="timeout" from="PipesSpawner/Timer" to="PipesSpawner" method="_on_timer_timeout"]
[connection signal="game_over" from="BirdRigidBody2D" to="." method="_on_bird_rigid_body_2d_game_over"]
